@@ -5,6 +5,7 @@
 - "open" now accept integer as parameters to open links (suggested by Matthieu Rakotojaona)
 - netcache: use client-certificate when going to a url like gemini://username@site.net (by Bert Livens)
 - offpunk/netcache: added the "cert" command to list and create client certificates (Bert Livens)
+- fix cache not being properly accessed when server redirect to same host with standard port (gemini.ucant.org)
 
 ## 2.3 - June 29th 2024
 - Wayland clipboard support through wl-clipboard (new suggested dependency)
